# CLion-SDL2-Template

./: CMakeLists.txt  README.md  main.cpp
GameEngine/: Game.cpp  Game.h
